--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header class="l-header">
             <nav class="nav bd-grid">
                 <div>
-                    <a href="#" class="nav__logo">Moshood Sanusi</a>
+                    <a href="#" class="nav__logo" style = "font-family: 'Great Vibes';">Moshood Sanusi</a>
                 </div>
 
                 <div class="nav__menu" id="nav-menu">
@@ -26,6 +26,7 @@
                         <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
                         <li class="nav__item"><a href="#work" class="nav__link">Projects</a></li>
                         <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
+                        <li class="nav__item"><a href="Moshood-Abiola-Sanusi-CV.pdf" download class="button">Download CV</a></li>
                     </ul>
                 </div>
 
@@ -152,7 +153,7 @@
                     </div>
                     
                     <div>              
-                        <img src="assets/img/work3.jpg"  alt="" class="skills__img">
+                        <img src="work4.jpg"  alt="" class="skills__img">
                     </div>
                 </div>
             </section>
@@ -171,8 +172,8 @@
                     <a href="https://www.figma.com/file/C8k2sdrJ9EtmYDgWGeF3x5/Untitled?type=design&node-id=0-1&mode=design&t=tqNPC8py6MIZrwdT-0" class="work__img">
                         <img src="finance app projects.jpg" alt="">
                     </a>
-                    <a href="" class="work__img">
-                        <img src="work4.jpg" alt="">
+                    <a href="https://www.figma.com/file/0LADYXZikHWz9snYizIknX/Kings'-realm-UI%2FUX-(Copy)?type=design&node-id=542-1529&mode=design&t=hUVmi77L1XiwlWyn-0" class="work__img">
+                        <img src="chess game.jpg" alt="">
                     </a>
                     <a href="" class="work__img">
                         <img src="work5.jpg" alt="">
@@ -203,7 +204,7 @@
             <p class="footer__title">Moshood</p>
             <div class="footer__social">
                 <a href="https://www.facebook.com/moshood.sanusi.925" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
-                <a href="" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
+                <a href="https://www.instagram.com/moshood2379/" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
                 <a href="https://twitter.com/SanusiMoshood9?t=FMIPhJxh4vvmowMI3KLUKA&s=09" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
             </div>
          
