--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <a href="https://www.figma.com/file/MCH5WSfe7ixuBUNjL7roDG/Untitled?type=design&node-id=0-1&mode=design&t=LNqHIfHiL56tihQ9-0" class="work__img">
                         <img src="mental health app.jpg" alt="">
                     </a>
-                    <a href="https://www.figma.com/file/C8k2sdrJ9EtmYDgWGeF3x5/Untitled?type=design&node-id=0-1&mode=design&t=tqNPC8py6MIZrwdT-0" class="work__img">
+                    <a href="https://www.figma.com/file/vsq0gzVi8tuBcKzGq6jniO/Untitled?type=design&node-id=0-1&mode=design&t=0CFoLpjh87lID1vm-0" class="work__img">
                         <img src="finance app projects.jpg" alt="">
                     </a>
                     <a href="https://www.figma.com/file/0LADYXZikHWz9snYizIknX/Kings'-realm-UI%2FUX-(Copy)?type=design&node-id=542-1529&mode=design&t=hUVmi77L1XiwlWyn-0" class="work__img">
