--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <a href="https://www.figma.com/file/vsq0gzVi8tuBcKzGq6jniO/Untitled?type=design&node-id=0-1&mode=design&t=0CFoLpjh87lID1vm-0" class="work__img">
                         <img src="finance app projects.jpg" alt="">
                     </a>
-                    <a href="https://www.figma.com/file/0LADYXZikHWz9snYizIknX/Kings'-realm-UI%2FUX-(Copy)?type=design&node-id=542-1529&mode=design&t=hUVmi77L1XiwlWyn-0" class="work__img">
+                    <a href="https://docs.google.com/presentation/d/1nYO9e0FVWwQvOekr6p1VE4P1z2EEEx6Td-8zL7L-pXw/edit#slide=id.p" class="work__img">
                         <img src="chess game.jpg" alt="">
                     </a>
                     <a href="https://www.figma.com/file/lM5PQdrCHVxz6ms0efP2ol/Untitled?type=design&node-id=0-1&mode=design&t=m6XNqP1dUa1q0sX2-0" class="work__img">
