--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         <img src="finance app projects.jpg" alt="">
                     </a>
                     <a href="https://docs.google.com/presentation/d/1nYO9e0FVWwQvOekr6p1VE4P1z2EEEx6Td-8zL7L-pXw/edit#slide=id.p" class="work__img">
-                        <img src="chess game.jpg" alt="">
+                        <img src="0001.jpg" alt="">
                     </a>
                     <a href="https://www.figma.com/file/lM5PQdrCHVxz6ms0efP2ol/Untitled?type=design&node-id=0-1&mode=design&t=m6XNqP1dUa1q0sX2-0" class="work__img">
                         <img src="work5.jpg" alt="">
