--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         <img src="0001.jpg" alt="">
                     </a>
                     <a href="https://www.figma.com/file/lM5PQdrCHVxz6ms0efP2ol/Untitled?type=design&node-id=0-1&mode=design&t=m6XNqP1dUa1q0sX2-0" class="work__img">
-                        <img src="work5.jpg" alt="">
+                        <img src="veegil.jpeg" alt="">
                     </a>
                     <a href="https://www.figma.com/file/BzG8QAolGRUlFtkdf4QvZl/Labs-by-Bincoms?type=design&node-id=0-1&mode=design&t=mv78A1NmzprYZHGa-0" class="work__img">
                         <img src="work6.jpg" alt="">
