--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                         <img src="veegil.jpeg" alt="">
                     </a>
                     <a href="https://www.figma.com/file/BzG8QAolGRUlFtkdf4QvZl/Labs-by-Bincoms?type=design&node-id=0-1&mode=design&t=mv78A1NmzprYZHGa-0" class="work__img">
-                        <img src="work6.jpg" alt="">
+                        <img src="quickaid.jpeg" alt="">
                     </a>
                 </div>
             </section>
