--- a/index.html
+++ b/index.html
@@ -77,7 +77,17 @@
                     
                     <div>
                         <h2 class="about__subtitle">I'm Moshood</h2>
-                        <p class="about__text">Focused on leveraging my passion for creativity and dynamisim to become a renowned and well-grounded UI/UX designer. A curiosity-driven individual who strongly believe that acquiring new skills and knowledge is the basis for any meaningful and tangible development.</p>           
+                        <p class="about__text">Hello there! I'm Moshood, a dedicated UI/UX designer fueled by curiosity and passion. With a positive outlook and a knack for problem-solving, I thrive on creating intuitive and visually appealing user experiences that leave a lasting impression.
+
+My journey in design is driven by a deep-seated desire to understand user behavior and craft solutions that exceed expectations. I believe that great design not only enhances functionality but also enriches lives.
+
+Beyond pixels and wireframes, I place great emphasis on building strong interpersonal relationships. Collaboration is at the heart of my process, as I value open communication and teamwork to bring ideas to life.
+
+When I'm not immersed in the world of design, you'll often find me exploring new technologies, seeking inspiration in art and nature, or simply enjoying a good cup of coffee with friends. Let's connect and create something extraordinary together!
+
+
+
+.</p>           
                     </div>                                   
                 </div>
             </section>
