--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- =====BOX ICONS===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
-        <title>Portfolio website complete</title>
+        <title>Portfolio website</title>
     </head>
     <body>
         <!--===== HEADER =====-->
@@ -40,7 +40,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Moshood</span><br> UI/UX Designer</h1>
+                    <h2 class="home__title">I’m Moshood, a UI/UX designer who blends strategy, aesthetics, and usability to create digital experiences that captivate and convert. From intuitive wireframes to pixel-perfect interfaces, I turn ideas into interactive magic.</h2>
 
                     <a href="https://wa.me/+2349038979339" class="button">Let's chat</a>
                 </div>
