--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h4 class="home__title">I’m Moshood, a UI/UX designer who blends strategy, aesthetics, and usability to create digital experiences that captivate and convert. From intuitive wireframes to pixel-perfect interfaces, I turn ideas into interactive magic.</h4>
+                    <p class="home__title">I’m Moshood, a UI/UX designer who blends strategy, aesthetics, and usability to create digital experiences that captivate and convert. From intuitive wireframes to pixel-perfect interfaces, I turn ideas into interactive magic.</p>
 
                     <a href="https://wa.me/+2349038979339" class="button">Let's chat</a>
                 </div>
