--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
                         <li class="nav__item"><a href="#work" class="nav__link">Projects</a></li>
                         <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
-                        <li class="nav__item"><a href="Moshood-Abiola-Sanusi-CV.pdf" download class="button">Download CV</a></li>
+                        <li class="nav__item"><a href="MOSHOOD SANUSI-CV" download class="button">Download CV</a></li>
                     </ul>
                 </div>
 
